# selenium-smart-locator

./: .pre-commit-config.yaml  .travis.yaml  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: deploy.yml  pull_request.yml
src/smartloc/: __init__.py
testing/: test_smart_locator.py
