[metadata]
name = selenium-smart-locator
author = Milan Falesnik
author_email = mfalesni@redhat.com
maintainer = Mike Shriver
maintainer_email = mshriver@redhat.com
description = A (somewhat) smart locator class for Selenium.
long_description= file: README.rst
license = GPLv3
url = https://github.com/RedHatQE/selenium-smart-locator
keywords =
    locator
    selenium
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Topic :: Utilities
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Quality Assurance
    Topic :: Software Development :: Testing

[options]
install_requires =
    selenium

setup_requires =
    setuptools_scm
package_dir =
    =src
packages =
    smartloc

[options.extras_require]
test =
    pre-commit
    pytest
    pytest-cov

[flake8]
max-line-length = 100
ignore = E128,E811,W503,W504,E203
